--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,1 @@
-<h1 class="text-3xl text-red-600">{{ title }}</h1>
-<h2 class="text-3xl text-green-600">{{ count }}</h2>
-<button class="bg-green-300 p-2 rounded" (click)="increment()">Increment</button>
-
-<router-outlet></router-outlet>
+<app-sidebar></app-sidebar>
